--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.54.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
